--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,15 @@
 @import "bootstrap";
 
+/* mixins, variables, etc. */
+
+$grayMediumLight: #eaeaea;
+
+@mixin box_sizing {
+       -moz-box-sizing: border-box;
+       -webkit-box-sizing: border-box;
+       box-sizing: border-box;
+}
+
 /* universal */
 
 html {
@@ -75,7 +85,7 @@ p {
 footer {
        margin-top: 45px;
        padding-top: 5px;
-       border-top: 1px solid #eaeaea;
+       border-top: 1px solid $grayMediumLight;
        color: #999;
        a {
          color: #555;
@@ -94,4 +104,14 @@ footer {
 	     margin-left: 10px;
 	  }
        }
+}
+
+/* miscellaneous */
+
+.debug_dump {
+	    clear: both;
+	    float: left;
+	    width: 100%;
+	    margin-top: 45px;
+	    @include box_sizing;
 }
