--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 	  <li><%= link_to "Home", root_path %></li>
 	  <li><%= link_to "Help", help_path %></li>
 	  <% if signed_in? %>
-	  <li><%= link_to "Users", '#' %></li>
+	  <li><%= link_to "Users", users_path %></li>
 	  <li id="fat-menu" class="dropdown">
 	    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 	      Account <b class="caret"></b>
@@ -17,7 +17,7 @@
 	      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
 	      <li class="divider"></li>
 	      <li>
-		<%= link_to "Sign out", signout_path, method: "delete" %>
+	  	<%= link_to "Sign out", signout_path, method: "delete" %>
 	      </li>
 	    </ul>
 	  </li>
