--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -181,9 +181,9 @@ input {
        li {
        	  overflow: auto;
 	  padding: 10px 0;
-	  border-top: 1px solid %grayLighter;
+	  border-top: 1px solid $grayLighter;
 	  &:last-child {
-	  	       border-bottom: 1px solid %grayLighter;
+	  	       border-bottom: 1px solid $grayLighter;
 	  }
        }
 }
