--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,15 @@
+<% if signed_in? %>
+<div class="row">
+  <aside class="span4">
+    <section>
+      <%= render 'shared/user_info' %>
+    </section>
+    <section>
+      <%= render 'shared/micropost_form' %>
+    </section>
+  </aside>
+</div>
+<% else %>
 <div class="center hero-unit">
   <h1>Welcome to the Sample App</h1>
   <h2>
@@ -10,3 +22,4 @@
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://railstutorial.org/' %>
+<% end %>
