--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,4 +1,7 @@
 <li>
   <span class="content"><%= micropost.content %></span>
   Posted <span class="timestamp"><%= time_ago_in_words(micropost.created_at) %> ago.</span>
+  <% if current_user?(micropost.user) %>
+  <%= link_to "delete", micropost, method: :delete, data: { confirm: "You sure?"}, title: micropost.content %>
+  <% end %>
 </li>
